--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div class="row">
           <div class="col-xs-6">
             <h2 class="text-center">Description</h2>
+            <p>
+              console.log() puts stuff in the console!!!!
+            </p>
+            
           </div>
           <div class="col-xs-6">
             <h2 class="text-center">Example</h2>
