--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             <p>
               console.log() puts stuff in the console!!!!
             </p>
-            
+            <p>
+              funtions are code the can be called with things!!!
+            </p>
+            <p>
+              
+            </p>
           </div>
           <div class="col-xs-6">
             <h2 class="text-center">Example</h2>
