--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
               funtions are code the can be called with things!!!
             </p>
             <p>
+              .toString() because integers suck!!!
+            </p>
+            <p>
+              jquery (.css) change css stuff in javascript!!!
+            </p>
+            <p>
               
             </p>
           </div>
