--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
               jquery (.css) change css stuff in javascript!!!
             </p>
             <p>
-              
+              FIREBASE THE GOD OF ALL GODS
+            </p>
+            <p>
+              Sanitization because people suck!!!
             </p>
           </div>
           <div class="col-xs-6">
