--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
             <p>
               Sanitization because people suck!!!
             </p>
+            <p>
+              creating users
+            </p>
           </div>
           <div class="col-xs-6">
             <h2 class="text-center">Example</h2>
+            <pre>console.log("your mom");</pre>
           </div>
         </div>
 
