--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           <div class="col-xs-6">
             <h2 class="text-center">Example</h2>
             <pre>console.log("your mom");</pre>
+            <pre>function urmum() {
+    console.log("your mom");
+   }</pre>
+            <pre></pre>
           </div>
         </div>
 
