--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             <pre>function urmum() {
     console.log("your mom");
    }</pre>
-            <pre></pre>
+            <pre>var annoyingNumber = 6
+funtion numbersSuck() {
+  annoyingNumber.toString()
+}</pre>
           </div>
         </div>
 
