--- a/index.html
+++ b/index.html
@@ -43,9 +43,16 @@
     console.log("your mom");
    }</pre>
             <pre>var annoyingNumber = 6
-funtion numbersSuck() {
-  annoyingNumber.toString()
-}</pre>
+            
+var stringify = annoyingNumber.toString()
+</pre>
+            <pre>var firebaseConfig = {
+  apiKey: "jfajkfjkdjajvkjdjfsakjljdlfjsajkfljdslakjf;",
+  authDomain: "code-3324.firebaseapp.com",
+  databaseURL: "https://code-3423.firebaseio.com/"	
+};
+</pre>
+            <pre></pre>
           </div>
         </div>
 
