--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ var stringify = annoyingNumber.toString()
   databaseURL: "https://code-3423.firebaseio.com/"	
 };
 </pre>
-            <pre></pre>
+            <pre>var string = "&lt;script&gt; hack your stuff </pre>
           </div>
         </div>
 
