--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ var stringify = annoyingNumber.toString()
 </pre>
             <pre>var string = "&lt;script&gt; hack your stuff &lt;/script&gt;
 
-var noHax = string.leanerUser.replace(//g, "&lt;").replace(/>/g, "&gt;")</pre>
+var noHax = string.replace(/&lt;/g, "troll").replace(/&gt;/g, "troll")</pre>
+            <pre></pre>
           </div>
         </div>
 
