--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
               console.log() puts stuff in the console!!!!
             </p>
             <p class="desc">
+              functions can have funtions as arguments
+            </p>
+            <p class="desc">
               funtions are code the can be called with things!!!
             </p>
             <p class="desc">
@@ -39,6 +42,8 @@
           <div class="col-xs-6">
             <h2 class="text-center">Example</h2>
             <pre>console.log("your mom");</pre>
+            <pre>input.keydown(function(e) {
+  if (e.keyCode == 13) {</pre>
             <pre>function urmum() {
     console.log("your mom");
    }</pre>
