--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             <h2 class="text-center">Example</h2>
             <pre>console.log("your mom");</pre>
             <pre>input.keydown(function(e) {
-  if (e.keyCode == 13) {</pre>
+  if (e.keyCode == 13) {
+  stuff
+  j
+    }
+  })</pre>
             <pre>function urmum() {
     console.log("your mom");
    }</pre>
