--- a/index.html
+++ b/index.html
@@ -1,103 +1,9 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title></title>
-    <script src="/third_party/jquery/jquery.min.js"></script>
-    <script src="/third_party/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/third_party/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
+    <link rel="stylesheet" href="home.css"/>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <h2 class="text-center title">What I've learned</h2>
-        <div class="row">
-          <div class="col-xs-6">
-            <h2 class="text-center">Description</h2>
-            <p class="desc">
-              console.log() puts stuff in the console!!!!
-            </p>
-            <p class="desc">
-              functions can have funtions as arguments
-            </p>
-            <p class="desc">
-              funtions are code the can be called with things!!!
-            </p>
-            <p class="desc">
-              .toString() because integers suck!!!
-            </p>
-            <p class="desc">
-              jquery (.css) change css stuff in javascript!!!
-            </p>
-            <p class="desc">
-              FIREBASE THE GOD OF ALL GODS
-            </p>
-            <p class="desc">
-              Sanitization because people suck!!!
-            </p>
-            <p class="desc">
-              creating users
-            </p>
-          </div>
-          <div class="col-xs-6">
-            <h2 class="text-center">Example</h2>
-            <pre>console.log("your mom");</pre>
-            <pre>input.keydown(function(e) {
-  if (e.keyCode == 13) {
-  stuff
-  j
-    }
-  })</pre>
-            <pre>function urmum() {
-    console.log("your mom");
-   }</pre>
-            <pre>var annoyingNumber = 6
-            
-var stringify = annoyingNumber.toString()
-</pre>
-            <pre>var firebaseConfig = {
-  apiKey: "jfajkfjkdjajvkjdjfsakjljdlfjsajkfljdslakjf;",
-  authDomain: "code-3324.firebaseapp.com",
-  databaseURL: "https://code-3423.firebaseio.com/"	
-};
-</pre>
-            <pre>var string = "&lt;script&gt; hack your stuff &lt;/script&gt;
-
-var noHax = string.replace(/&lt;/g, "troll").replace(/&gt;/g, "troll")</pre>
-            <pre>create.click(function() {
-  var accountstyle = $("#color").val()
-  if (user.length &lt; 11) {
-  user = newUser.val();
-  }
-  else {
-    $("#toolong").css({display: "block"});
-  }
-  if (pass1.val() == pass2.val()) {
-    var newPass = pass1.val()
-  }
-    else {
-      $("#nomatch").css({display: "block"});
-    }
-  storeValue(user,newPass)
-  storeValue(newPass, accountstyle)
-  addListItem("listOfUsers",",/" + user)
-  pass1.val("")
-  pass2.val("")
-  newUser.val("")
-  $("#color").val("")
-})</pre>
-          </div>
-        </div>
-
-        <div class="row learning-item">
-          <div class="col-xs-7 description">            
-          </div>
-          <div class="col-xs-5" id="console-log-example">
-
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
