--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
     <link rel="stylesheet" href="home.css"/>
+    <link rel="icon" type="image/png" href="http://s18.postimg.org/ti3v7ptd1/fire.png" />
+    <title>The Chat</title>
   </head>
   <body>
   </body>
