--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
     <link rel="stylesheet" href="home.css"/>
-    <link rel="icon" type="image/png" href="http://s18.postimg.org/ti3v7ptd1/fire.png" />
-    <title>The Chat</title>
+    <link rel="icon" type="image/png" href="hhttp://www.tejpata.org/decals/MidnightBSDLogo32x32.png" />
+    <title>Home Page</title>
   </head>
   <body>
+    <script src="home.js"></script>
   </body>
 </html>
