--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
   <head>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.0.4/firebase.js"></script>
+    <link rel="stylesheet" type="text/css" href="/third_party/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="home.css"/>
     <link rel="icon" type="image/png" href="hhttp://www.tejpata.org/decals/MidnightBSDLogo32x32.png" />
     <title>Home Page</title>
   </head>
   <body>
+    <h1 id="title">
+      Home Page
+    </h1>
     <script src="home.js"></script>
   </body>
 </html>
