--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Home Page</title>
   </head>
   <body>
+    <input type="button" value="calendar
     <h1 id="title">
       Home Page
     </h1>
