--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <title>Home Page</title>
   </head>
   <body>
-    <input type="button" value="calendar
     <h1 id="title">
       Home Page
     </h1>
+    <input type="button" value="calendar" id="calbtn">
+    <input type="button" value="Music" id="musbtn">
+    <input type="button" value="Drive" id="Dribtn">
+    <input type="button" value="calendar" id="calbtn">
+    <input type="button" value="calendar" id="calbtn">
+    <input type="button" value="calendar" id="calbtn">
+    <input type="button" value="calendar" id="calbtn">
+    <input type="button" value="calendar" id="calbtn">
+    <input type="button" value="calendar" id="calbtn">
+
     <script src="home.js"></script>
   </body>
 </html>
