--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1 id="title">
       Home Page
     </h1>
-    <input type="button" value="calendar" id="calbtn">
-    <input type="button" value="Music" id="musbtn">
+    <input type="button" value="Calendar" id="Calbtn">
+    <input type="button" value="Music" id="Musbtn">
     <input type="button" value="Drive" id="Dribtn">
-    <input type="button" value="calendar" id="calbtn">
-    <input type="button" value="calendar" id="calbtn">
+    <input type="button" value="Schedule" id="Schbtn">
+    <input type="button" value="Email" id="btn">
     <input type="button" value="calendar" id="calbtn">
     <input type="button" value="calendar" id="calbtn">
     <input type="button" value="calendar" id="calbtn">
