--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <input type="button" value="Music" id="Musbtn">
     <input type="button" value="Drive" id="Dribtn">
     <input type="button" value="Schedule" id="Schbtn">
-    <input type="button" value="Email" id="btn">
-    <input type="button" value="calendar" id="calbtn">
-    <input type="button" value="calendar" id="calbtn">
-    <input type="button" value="calendar" id="calbtn">
-    <input type="button" value="calendar" id="calbtn">
+    <input type="button" value="Email" id="mailbtn">
+    <input type="button" value="The Chat" id="chatbtn">
+    <input type="button" value="Classadoo" id="clabtn">
+    <input type="button" value="Youtube" id="youbtn">
+    <input type="button" value="Spanish Dict" id="calbtn">
 
     <script src="home.js"></script>
   </body>
