--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input type="button" value="The Chat" id="chatbtn">
     <input type="button" value="Classadoo" id="clabtn">
     <input type="button" value="Youtube" id="youbtn">
-    <input type="button" value="Spanish Dict" id="calbtn">
+    <input type="button" value="Spanish Dict" id="Spanbtn">
 
     <script src="home.js"></script>
   </body>
