--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="title">
       Home Page
     </h1>
-    <input type="button" value="Calendar" id="Calbtn">
+    <input type="button" value="Calendar" id="Calbtn" class="col-md-1">
     <input type="button" value="Music" id="Musbtn">
     <input type="button" value="Drive" id="Dribtn">
     <input type="button" value="Schedule" id="Schbtn">
