--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1 id="title">
       Home Page
     </h1>
-    <input type="button" value="Calendar" id="Calbtn" class="col-md-1">
-    <input type="button" value="Music" id="Musbtn">
+    <input type="button" value="Calendar" id="Calbtn" class="row col-md-6">
+    <input type="button" value="Music" id="Musbtn" class="row col-md-6">>
     <input type="button" value="Drive" id="Dribtn">
     <input type="button" value="Schedule" id="Schbtn">
     <input type="button" value="Email" id="mailbtn">
