--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h1 id="title">
       Home Page
     </h1>
-    <input type="button" value="Calendar" id="Calbtn" class="row col-md-6">
-    <input type="button" value="Music" id="Musbtn" class="row col-md-6">>
-    <input type="button" value="Drive" id="Dribtn">
-    <input type="button" value="Schedule" id="Schbtn">
-    <input type="button" value="Email" id="mailbtn">
-    <input type="button" value="The Chat" id="chatbtn">
-    <input type="button" value="Classadoo" id="clabtn">
-    <input type="button" value="Youtube" id="youbtn">
-    <input type="button" value="Spanish Dict" id="Spanbtn">
+    <input type="button" value="Calendar" id="Calbtn" class="btns row col-md-6">
+    <input type="button" value="Music" id="Musbtn" class="btns row col-md-6">
+    <input type="button" value="Drive" id="Dribtn" class="btn row col-md-6">
+    <input type="button" value="Schedule" id="Schbtn" class="row col-md-6">
+    <input type="button" value="Email" id="mailbtn" class="row col-md-6">
+    <input type="button" value="The Chat" id="chatbtn" class="row col-md-6">
+    <input type="button" value="Classadoo" id="clabtn" class="row col-md-12">
+    <input type="button" value="Youtube" id="youbtn" class="row col-md-6">
+    <input type="button" value="Spanish Dict" id="Spanbtn" class="row col-md-6">
     <script src="home.js"></script>
   </body>
 </html>
