--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </h1>
     <input type="button" value="Calendar" id="Calbtn" class="btns row col-md-6">
     <input type="button" value="Music" id="Musbtn" class="btns row col-md-6">
-    <input type="button" value="Drive" id="Dribtn" class="btn row col-md-6">
-    <input type="button" value="Schedule" id="Schbtn" class="row col-md-6">
-    <input type="button" value="Email" id="mailbtn" class="row col-md-6">
-    <input type="button" value="The Chat" id="chatbtn" class="row col-md-6">
-    <input type="button" value="Classadoo" id="clabtn" class="row col-md-12">
-    <input type="button" value="Youtube" id="youbtn" class="row col-md-6">
-    <input type="button" value="Spanish Dict" id="Spanbtn" class="row col-md-6">
+    <input type="button" value="Drive" id="Dribtn" class="btns row col-md-6">
+    <input type="button" value="Schedule" id="Schbtn" class="btns row col-md-6">
+    <input type="button" value="Email" id="mailbtn" class="btns row col-md-6">
+    <input type="button" value="The Chat" id="chatbtn" class="btns row col-md-6">
+    <input type="button" value="Classadoo" id="clabtn" class="btns row col-md-12">
+    <input type="button" value="Youtube" id="youbtn" class="btns row col-md-6">
+    <input type="button" value="Spanish Dict" id="Spanbtn" class=" btns row col-md-6">
     <script src="home.js"></script>
   </body>
 </html>
