--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h1 id="title">
       Home Page
     </h1>
-    <a type="button" value="Calendar" id="Calbtn" class="btn btns row col-md-6">Calendar</a>
+    <a href="https://nuevaschool.instructure.com/calendar" type="button" value="Calendar" id="Calbtn" class="btn btns row col-md-6">Calendar</a>
       <a type="button" value="Music" id="Musbtn" class="btn btns row col-md-6">Music</a>
       <a type="button" value="Drive" id="Dribtn" class="btn btns row col-md-6">Drive</a>
       <a type="button" value="Schedule" id="Schbtn" class="btn btns row col-md-6">Schedule</a>
       <a type="button" value="Email" id="mailbtn" class="btn btns row col-md-6">Email</a>
       <a type="button" value="The Chat" id="chatbtn" class="btn btns row col-md-6">The Chat</a>
       <a type="button" value="Classadoo" id="clabtn" class="btn btns row col-md-6">Classadoo</a>
-      <a type="button" value="Youtube" id="youbtn" class="btn btns row col-md-6"></a>
-      <a type="button" value="Spanish Dict" id="Spanbtn" class="btn btns row col-md-6"></a>
+      <a type="button" value="Youtube" id="youbtn" class="btn btns row col-md-6">Youtube</a>
+      <a type="button" value="Spanish Dict" id="Spanbtn" class="btn btns row col-md-6">Spanish Dict</a>
     <script src="home.js"></script>
   </body>
 </html>
