--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </h1>
     <a href="https://nuevaschool.instructure.com/calendar" type="button" value="Calendar" id="Calbtn" class="btn btns row col-md-6">Calendar</a>
     <a href="https://www.youtube.com/watch?v=I8OSGsANYOo" type="button" value="Music" id="Musbtn" class="btn btns row col-md-6">Music</a>
-      <a type="button" value="Drive" id="Dribtn" class="btn btns row col-md-6">Drive</a>
-    <a href="https://drive.google.com/drive/my-drive"href="http://technicalitystudios.com/a" type="button" value="Schedule" id="Schbtn" class="btn btns row col-md-6">Schedule</a>
-      <a type="button" value="Email" id="mailbtn" class="btn btns row col-md-6">Email</a>
-      <a type="button" value="The Chat" id="chatbtn" class="btn btns row col-md-6">The Chat</a>
+    <a href="https://drive.google.com/drive/my-drive" type="button" value="Drive" id="Dribtn" class="btn btns row col-md-6">Drive</a>
+    <a href="http://technicalitystudios.com/a" type="button" value="Schedule" id="Schbtn" class="btn btns row col-md-6">Schedule</a>
+    <a href="https://mail.google.com/mail/u/0/" type="button" value="Email" id="mailbtn" class="btn btns row col-md-6">Email</a>
+    <a href="https://jackbrasesco.github.io/chat/" type="button" value="The Chat" id="chatbtn" class="btn btns row col-md-6">The Chat</a>
       <a type="button" value="Classadoo" id="clabtn" class="btn btns row col-md-6">Classadoo</a>
       <a type="button" value="Youtube" id="youbtn" class="btn btns row col-md-6">Youtube</a>
       <a type="button" value="Spanish Dict" id="Spanbtn" class="btn btns row col-md-6">Spanish Dict</a>
