--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <a href="http://technicalitystudios.com/a" type="button" value="Schedule" id="Schbtn" class="btn btns row col-md-6">Schedule</a>
     <a href="https://mail.google.com/mail/u/0/" type="button" value="Email" id="mailbtn" class="btn btns row col-md-6">Email</a>
     <a href="https://jackbrasesco.github.io/chat/" type="button" value="The Chat" id="chatbtn" class="btn btns row col-md-6">The Chat</a>
-      <a type="button" value="Classadoo" id="clabtn" class="btn btns row col-md-6">Classadoo</a>
-      <a type="button" value="Youtube" id="youbtn" class="btn btns row col-md-6">Youtube</a>
-      <a type="button" value="Spanish Dict" id="Spanbtn" class="btn btns row col-md-6">Spanish Dict</a>
+    <a href="https://www.classadoo.com/dashboard/" type="button" value="Classadoo" id="clabtn" class="btn btns row col-md-6">Classadoo</a>
+    <a href="https://www.youtube.com/" type="button" value="Youtube" id="youbtn" class="btn btns row col-md-6">Youtube</a>
+    <a href="http://www.spanishdict.com/" type="button" value="Spanish Dict" id="Spanbtn" class="btn btns row col-md-6">Spanish Dict</a>
     <script src="home.js"></script>
   </body>
 </html>
